feat(sdk): Add caching and GetValue with inheritance for Go, TypeScript, Python, and Java SDKs (#6)
* Initial plan

* feat(sdk): Add caching, GetValue with inheritance/defaults for Go and TypeScript SDKs

- Go SDK:
  - Add in-memory cache with TTL (default 1 min) for config values by group
  - Add template caching for default value lookups
  - Add background sync to refresh cached configs
  - Add stale cache fallback when server unavailable
  - Add GetValue/GetValueString methods with UseDefault and Inherit options
  - Add LoadTemplatesFromDir for importing YAML templates
  - Add unit tests for cache and options

- TypeScript SDK:
  - Add ConfigCache class with TTL support
  - Add caching for config values and templates
  - Add background sync support
  - Add getValue method with useDefault and inherit options
  - Add getConfigCached and getConfigTemplateCached methods
  - Update types with ConfigTemplate, GetValueOptions interfaces
  - Update README with comprehensive documentation

Co-authored-by: tanloi3004 <3283794+tanloi3004@users.noreply.github.com>

* fix: Address code review feedback

- Fix TypeScript cache scope parsing to validate numeric conversion
- Fix Go getDefaultValue to return empty string defaults (valid values)
- Refactor Go template_loader to extract parseAndValidateTemplate function

Co-authored-by: tanloi3004 <3283794+tanloi3004@users.noreply.github.com>

* docs: Final verification complete

Co-authored-by: tanloi3004 <3283794+tanloi3004@users.noreply.github.com>

* fix: Correct scope hierarchy - USER is at same level as PROJECT

The correct hierarchy is:
  SYSTEM
  ├── PROJECT → STORE
  └── USER

So inheritance is:
- STORE → PROJECT → SYSTEM
- USER → SYSTEM (not USER → STORE → PROJECT → SYSTEM)
- PROJECT → SYSTEM

Updated both Go and TypeScript SDKs with the correct hierarchy.

Co-authored-by: tanloi3004 <3283794+tanloi3004@users.noreply.github.com>

* feat(sdk): Add Python and Java SDKs with caching, env vars support

- Python SDK:
  - Add sc